--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,6 +53,13 @@
                 app:dot="@drawable/default_bg_dot_view"
                 app:dotMargin="16dp" />
 
+        <Button
+            android:id="@+id/btn_next"
+            android:layout_gravity="center_horizontal"
+            android:text="下一步"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
         </LinearLayout>
 
         <FrameLayout
