--- a/app/src/main/res/layout/activity_discover_home_viewpager.xml
+++ b/app/src/main/res/layout/activity_discover_home_viewpager.xml
@@ -5,9 +5,9 @@
 
     <ImageView
         android:id="@+id/iv_commodity_picture"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
-        android:scaleType="fitXY" />
+        android:scaleType="fitCenter" />
 
 </RelativeLayout>
